RESOLVED FIXED97359
AX: support clickPoint in DRT for chromium
https://bugs.webkit.org/show_bug.cgi?id=97359
Summary AX: support clickPoint in DRT for chromium
chris fleizach
Reported 2012-09-21 13:44:08 PDT
This will allow us to unblock accessibility/svg-bounds.html
Attachments
Patch (12.26 KB, patch)
2012-12-17 15:12 PST, Dominic Mazzoni
no flags
Patch for landing (12.19 KB, patch)
2012-12-17 16:16 PST, Dominic Mazzoni
no flags
Patch (18.93 KB, patch)
2012-12-18 11:45 PST, Dominic Mazzoni
no flags
Patch (19.19 KB, patch)
2012-12-18 12:04 PST, Dominic Mazzoni
no flags
Patch (21.28 KB, patch)
2012-12-19 20:16 PST, Dominic Mazzoni
no flags
Dominic Mazzoni
Comment 1 2012-12-17 15:12:19 PST
chris fleizach
Comment 2 2012-12-17 15:14:03 PST
Comment on attachment 179810 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=179810&action=review > Tools/DumpRenderTree/chromium/TestRunner/src/AccessibilityUIElementChromium.cpp:742 > + if (arguments.size() != 2 || !arguments[0].isNumber() || !arguments[1].isNumber()) { you could set result->setNull() at the top and then be able to just return on the failure case here and... > Tools/DumpRenderTree/chromium/TestRunner/src/AccessibilityUIElementChromium.cpp:752 > + result->setNull(); here
Dominic Mazzoni
Comment 3 2012-12-17 16:16:32 PST
Created attachment 179825 [details] Patch for landing
WebKit Review Bot
Comment 4 2012-12-17 18:11:38 PST
Comment on attachment 179825 [details] Patch for landing Rejecting attachment 179825 [details] from commit-queue. New failing tests: accessibility/svg-bounds.html accessibility/svg-remote-element.html Full output: http://queues.webkit.org/results/15377906
Dominic Mazzoni
Comment 5 2012-12-18 11:45:15 PST
WebKit Review Bot
Comment 6 2012-12-18 11:48:21 PST
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
Dominic Mazzoni
Comment 7 2012-12-18 12:04:11 PST
Dominic Mazzoni
Comment 8 2012-12-18 12:07:04 PST
OK, I made a few more changes so there aren't any platform-specific differences in the test expectations - take another quick look?
Darin Fisher (:fishd, Google)
Comment 9 2012-12-18 13:14:46 PST
Comment on attachment 179995 [details] Patch WebKit API changes LGTM
WebKit Review Bot
Comment 10 2012-12-18 13:29:12 PST
Comment on attachment 179995 [details] Patch Clearing flags on attachment: 179995 Committed r138061: <http://trac.webkit.org/changeset/138061>
WebKit Review Bot
Comment 11 2012-12-18 13:29:16 PST
All reviewed patches have been landed. Closing bug.
Ilya Tikhonovsky
Comment 12 2012-12-18 23:37:59 PST
Reverted r138061 for reason: It is crashing on Debug bots Committed r138121: <http://trac.webkit.org/changeset/138121>
chris fleizach
Comment 13 2012-12-18 23:41:28 PST
(In reply to comment #12) > Reverted r138061 for reason: > > It is crashing on Debug bots > > Committed r138121: <http://trac.webkit.org/changeset/138121> This bug was also opened https://bugs.webkit.org/show_bug.cgi?id=105372
Dominic Mazzoni
Comment 14 2012-12-19 20:16:22 PST
Dominic Mazzoni
Comment 15 2012-12-19 20:19:55 PST
The problem was that we were calling a method to retrieve the bounding rect of an SVG object that wasn't taking transformations into account, and this triggered an assertion failure in debug mode on Chromium. It seems like this fix should be safe, the focus rect logic shouldn't ever be needed for an SVG object.
chris fleizach
Comment 16 2012-12-20 09:11:26 PST
Comment on attachment 180266 [details] Patch can you also undo this change http://trac.webkit.org/changeset/138094
WebKit Review Bot
Comment 17 2012-12-20 09:30:41 PST
Comment on attachment 180266 [details] Patch Clearing flags on attachment: 180266 Committed r138260: <http://trac.webkit.org/changeset/138260>
WebKit Review Bot
Comment 18 2012-12-20 09:30:46 PST
All reviewed patches have been landed. Closing bug.
Tony Chang
Comment 19 2012-12-20 15:17:04 PST
accessibility/svg-remote-element.html appears to be timing out on the Chromium debug bots. Should I mark this test as slow? http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=accessibility%2Fsvg-remote-element.html
Dominic Mazzoni
Comment 20 2012-12-20 16:07:14 PST
It's not slow. I think it's flakiness, I filed a new bug for it and I think I know what the issue might be: https://bugs.webkit.org/show_bug.cgi?id=105587
Note You need to log in before you can comment on or make changes to this bug.